fixed overlapping issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -84,19 +84,19 @@
 
 @keyframes slideUp {
   0% {
-    transform: translateY(64px);
+    transform: translateY(0);
   }
   100% {
-    transform: translateY(-104px);
+    transform: translateY(-100%);
   }
 }
 
 @keyframes slideDown {
   0% {
-    transform: translateY(-104px);
+    transform: translateY(-100%);
   }
   100% {
-    transform: translateY(64px);
+    transform: translateY(0);
   }
 }
 
